Reverse proxy works for webGL

--- a/docker/webgl-client/index.html
+++ b/docker/webgl-client/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL.loader.js";
+      var loaderUrl = buildUrl + "/webgl-client.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL.data",
-        frameworkUrl: buildUrl + "/WebGL.framework.js",
-        codeUrl: buildUrl + "/WebGL.wasm",
+        dataUrl: buildUrl + "/webgl-client.data",
+        frameworkUrl: buildUrl + "/webgl-client.framework.js",
+        codeUrl: buildUrl + "/webgl-client.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "docker-mirror-tanks",
